# multivox

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  NOTES.md  docker-compose.yml
client/: build.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
client/src/: App.tsx  AudioPlayer.ts  AudioRecorder.ts  ChatHistory.ts  ChatMessages.tsx  Config.tsx  Demo.tsx  ErrorBoundary.tsx  FlashcardGenerator.tsx  Landing.tsx  LanguageSelector.tsx  Practice.tsx  PracticeStore.ts  PracticeVocabulary.tsx  ScenarioList.tsx  ScenarioSelect.tsx  Translate.tsx  TypedWebSocket.ts  VocabularyList.tsx  constants.ts  index.html  main.css  main.tsx  practiceUtils.ts  store.ts  types.ts
client/src/components/: ErrorBoundary.tsx  Footer.tsx  LoadingModal.tsx  PracticeVocabulary.tsx  ThemeController.tsx  Toast.tsx  VocabItem.tsx
client/src/layouts/: AppLayout.tsx  NavBar.tsx
client/src/pages/: config.tsx  landing.tsx
client/src/pages/chat/: index.tsx  store.ts
client/src/pages/chat/components/: AudioPlayer.ts  AudioRecorder.ts  ChatControls.tsx  ChatMessages.tsx  PracticeVocabulary.tsx  TypedWebSocket.ts
client/src/pages/flashcards/: flashcards.ts  index.tsx  store.ts
client/src/pages/journal/: index.tsx  store.ts
client/src/pages/scenario/: index.tsx  list.tsx  store.ts
client/src/pages/scenarios/: ScenarioList.tsx  index.tsx
client/src/pages/translate/: index.tsx
client/src/pages/vocabulary/: index.tsx
client/src/stores/: app.ts  flashcards.ts  practice.ts
client/src/ui/: ThemeController.tsx
server/: pyproject.toml
server/multivox/: app.py  cache.py  chapters.json  config.py  hint.py  hints.py  journal.py  message_socket.py  prompts.py  scenarios.json  scenarios.py  scenarios.yaml  send_test_messages.py  tasks.py  transcribe.py  transcription.py  translate.py  translation.py  tts.py  types.py  websocket.py
server/multivox/flashcards/: api.py  flashcard_template.typ  generate_anki.py  generate_pdf.py  generate_pdf_typst.py  lib.py  schema.py
server/notebooks/: silero.ipynb
server/scripts/: generate_scenarios.py  precommit.py
server/tests/: test_flashcards.py  test_hints.py  test_practice.py  test_streaming_transcription.py  test_transcribe.py  test_transcription.py  test_translate.py  test_typst_flashcards.py
